--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,14 @@
 body {
     /* background-color: #EDF2F4; */
     /* background-color: #F1F7EE; */
-    background-color: #E2E2E2;
+    /* background-color: #E2E2E2; */
+    background-color: #C3C3C3;
+    animation: bganim 2s;
+}
+
+@keyframes bganim {
+    from {background-color: #343a40;}
+    to {background-color: #C3C3C3;}
 }
 
 .navbar-brand .nav-link {
