further updated css and animation

--- a/css/style.css
+++ b/css/style.css
@@ -5,21 +5,23 @@ body {
     /* background-color: #F1F7EE; */
     /* background-color: #E2E2E2; */
     /* background-color: #C3C3C3; */
-    background-color: #2980b9;
+    /* background-color: #2980b9; */
+    background-color: #051923;
     animation: bganim 2s;
 }
 
 .bg-dark {
-    background-color: #003554!important;
+    background: linear-gradient(145deg, rgba(0,166,251,1) 0%, rgba(0,53,84,1) 100%)!important;
 }
 
 .card {
     border: 1px solid #003554;
+    background-color: #003554;
 }
 
 @keyframes bganim {
-    from {background-color: #003554;}
-    to {background-color: #2980b9;}
+    from {background-color: #2980b9;}
+    to {background-color: #051923;}
 }
 
 .delay-1-1qtr {
