--- a/css/style.css
+++ b/css/style.css
@@ -60,10 +60,15 @@ body {
   height: 100%;
 }
 
-#page-content {
+body {
+    display: flex;
+    flex-direction: column;
+}
+
+.container {
   flex: 1 0 auto;
 }
 
 #sticky-footer {
-  flex-shrink: none;
+  flex-shrink: 0;
 }
