--- a/css/style.css
+++ b/css/style.css
@@ -6,13 +6,14 @@ body {
     background-attachment: fixed;
 }
 
-.opacity {
-    opacity: 0.5;
+/* Navbar CSS */
+.mr-auto {
+    margin-right: 0 !important;
 }
-
-h1 {
- opacity: 1.0 !important;
-}
+.navbar-toggleable-md .navbar-collapse {         
+    -webkit-justify-content: flex-end;
+    justify-content: flex-end;  
+} 
 
 /* Animation CSS */
 @keyframes bganim {
@@ -79,11 +80,3 @@ body {
 #sticky-footer {
   flex-shrink: 0;
 }
-
-.mr-auto {
-    margin-right: 0 !important;
-}
-.navbar-toggleable-md .navbar-collapse {         
-    -webkit-justify-content: flex-end;
-    justify-content: flex-end;  
-} 
